Cambio De Slider En index.html

--- a/site/base.html
+++ b/site/base.html
@@ -50,7 +50,23 @@ Carrucel De Imágenes
 
 
 
+<div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Un lugar de ensueño.</h5>
+        </div>
+        <div class="row center">
+          <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+        </div>
+        <br><br>
 
+      </div>
+    </div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+  </div>
 
 
 
