--- a/site/index.html
+++ b/site/index.html
@@ -53,25 +53,64 @@
       <li><a class="waves-effect blue" href="contacto.html"><i class="material-icons">contact_mail</i></a></li>
     </ul>
   </div>
-    
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">Un lugar de ensueño.</h5>
-        </div>
-        <div class="row center">
-          <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
-        </div>
-        <br><br>
 
-      </div>
-    </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <!-- INICIO  SLIDER DE IMÁGENES     -->  
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="img/room1.jpg"> <!-- IMAGEN 1 -->
+        <div class="caption right-align">
+          <div class="container">
+            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <br><br>
+            <div class="row center">
+              <h5 class="header col s12 light">Un lugar de ensueño.</h5>
+            </div>
+            <div class="row center">
+              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+            </div>
+            <br><br>
+          </div>    
+        </div>
+      </li>
+      <li>
+        <img src="img/room2.jpg"> <!-- IMAGEN 2 -->
+        <div class="caption right-align">
+          <div class="container">
+            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <br><br>
+            <div class="row center">
+              <h5 class="header col s12 light">Un lugar de ensueño.</h5>
+            </div>
+            <div class="row center">
+              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+            </div>
+            <br><br>
+          </div>    
+        </div>
+      </li>
+      <li>
+        <img src="img/room3.jpg"> <!-- IMAGEN 3 -->
+        <div class="caption right-align">
+          <div class="container">
+            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <br><br>
+            <div class="row center">
+              <h5 class="header col s12 light">Un lugar de ensueño.</h5>
+            </div>
+            <div class="row center">
+              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+            </div>
+            <br><br>
+          </div>    
+        </div>
+      </li>
+    </ul>
   </div>
+<!-- FIN  SLIDER DE IMÁGENES     -->
+
+  
   <div class="container">
     <div class="section">
 
@@ -219,6 +258,7 @@
     $(document).ready(function(){
       $('.slider').slider({full_width: true});
     });
+
   </script>
 
   </body>
