--- a/site/index.html
+++ b/site/index.html
@@ -84,7 +84,7 @@
               <h5 class="header col s12 light">Un lugar de ensueño.</h5>
             </div>
             <div class="row center">
-              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Eventos</a>
             </div>
             <br><br>
           </div>    
@@ -100,7 +100,7 @@
               <h5 class="header col s12 light">Un lugar de ensueño.</h5>
             </div>
             <div class="row center">
-              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Nuestras Habitaciones</a>
+              <a href="habitaciones.html" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Contacto</a>
             </div>
             <br><br>
           </div>    
@@ -121,7 +121,7 @@
             <h2 class="center indigo-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Viaja En Familia</h5>
 
-            <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, la ciudad más tranquila del mundo.</p>
+            <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, el municipio más tranquilo del mundo.</p>
           </div>
         </div>
 
@@ -219,7 +219,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Hotel La Fuente J.N.</h5>
-          <p class="grey-text text-lighten-4">Somos una empresa dedicada al turismolocalizados en la ciudad de La Macarena Meta Colombia.</p>
+          <p class="grey-text text-lighten-4">Somos una empresa dedicada al turismolocalizados en el municipio de La Macarena Meta Colombia.</p>
 
 
         </div>
