Actualizacion slider index.html

--- a/site/index.html
+++ b/site/index.html
@@ -59,7 +59,7 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="img/room1.jpg"> <!-- IMAGEN 1 -->
+        <img src="img/font1.jpg"> <!-- IMAGEN 1 -->
         <div class="caption right-align">
           <div class="container">
             <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
@@ -75,7 +75,7 @@
         </div>
       </li>
       <li>
-        <img src="img/room2.jpg"> <!-- IMAGEN 2 -->
+        <img src="img/room3.jpg"> <!-- IMAGEN 2 -->
         <div class="caption right-align">
           <div class="container">
             <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
@@ -91,7 +91,7 @@
         </div>
       </li>
       <li>
-        <img src="img/room3.jpg"> <!-- IMAGEN 3 -->
+        <img src="img/room10.jpg"> <!-- IMAGEN 3 -->
         <div class="caption right-align">
           <div class="container">
             <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
