--- a/site/contact.html
+++ b/site/contact.html
@@ -22,13 +22,13 @@
 			<div class="nav-wrapper container">
 				<a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
 				<ul class="right hide-on-med-and-down">
-					<li class="active"><a href="index.html">Inicio</a></li>
+					<li><a class="white-text" href="index.html">Inicio</a></li>
 					<li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
 					<li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
 					<li><a class="white-text" href="galeria.html">Galería</a></li>
 					<li><a class="white-text" href="restorant.html">Restaurantes</a></li>
 					<li><a class="white-text" href="team.html">Equipo</a></li>
-					<li><a class="white-text" href="contact.html">Contacto</a></li>
+					<li class="active"><a href="contact.html">Contacto</a></li>
 				</ul>
 				<ul id="nav-mobile" class="side-nav">
 					<li><a href="#">Inicio</a></li>
