--- a/site/index.html
+++ b/site/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+  <meta name="description" content="Hotel La Fuente J.N.">
+  <!-- DESCRIPCIÓN PARA LOS BUSCADORES GOOGLE YAHOO AMAZON MSN.-->
+  <meta name="keywords" content="Viajes A La Macarena,Viajas Colombia, Hotel Caño Cristales,Hotel La Fuente J.N., Hotel La Fuente La Macarena, Viaje A Caño Cristales, Caño Cristales Colombia, La Macarena, La Macarena Meta,">
+  <!-- Palabras Clave --> <!-- NO BORRAR NUNCA IMPORTANTE PARA EL POSICIONAMIENTO AGREGAR CONCEPTOS CLAVE-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Hotel La Fuente J.N.</title>
 
-  <!-- CSS  -->
+  <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <!-- CSS  -->
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <title>Hotel La Fuente J.N.</title>
 </head>
 <body>
+  <div>
+  	<nav class="indigo" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
+        <ul class="right hide-on-med-and-down">
+          <li class="active"><a href="index.html">Inicio</a></li>
+          <li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
+          <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
+          <li><a class="white-text" href="galeria.html">Galería</a></li>
+          <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
+          <li><a class="white-text" href="team.html">Equipo</a></li>
+          <li><a class="white-text" href="contact.html">Contacto</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="habitaciones.html">Habitaciones</a></li>
+          <li><a href="fotos.html">Eventos</a></li>
+          <li><a href="activities.html">Actividades</a></li>
+          <li><a href="restorant.html">Restaurantes</a></li>
+          <li><a href="team.html">Equipo</a></li>
+          <li><a href="contact.html">Contacto</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
   
-  <nav class="indigo" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
-      <ul class="right hide-on-med-and-down">
-        <li class="active"><a href="index.html">Inicio</a></li>
-        <li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
-        <li><a class="white-text" href="eventos.html">Eventos</a></li>
-        <li><a class="white-text" href="activities.html">Actividades</a></li>
-        <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
-        <li><a class="white-text" href="team.html">Equipo</a></li>
-        <li><a class="white-text" href="contact.html">Contacto</a></li>
-      </ul>
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="habitaciones.html">Habitaciones</a></li>
-        <li><a href="fotos.html">Eventos</a></li>
-        <li><a href="activities.html">Actividades</a></li>
-        <li><a href="restorant.html">Restaurantes</a></li>
-        <li><a href="team.html">Equipo</a></li>
-        <li><a href="contact.html">Contacto</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-    
-  </nav>
-
-
-
-
 
   <div class="fixed-action-btn toolbar">
     <a class="btn-floating btn-large indigo">
@@ -214,7 +217,7 @@
   <footer class="page-footer indigo darken-1">
     <div class="container">
       <div class="row center">
-      	<iframe id="mapaGoogle" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1676.2946292823344!2d-73.785972122252!3d2.1829090941499074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe25fd5c75cede46d!2sHotel+la+fuente+la+macarena-meta!5e0!3m2!1ses!2s!4v1494699911734" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      	<iframe id="mapaGoogle" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1676.2946292823344!2d-73.785972122252!3d2.1829090941499074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe25fd5c75cede46d!2sHotel+la+fuente+la+macarena-meta!5e0!3m2!1ses!2s!4v1494699911734" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="row">
         <div class="col l6 s12">
