--- a/site/alojamiento.html
+++ b/site/alojamiento.html
@@ -22,9 +22,9 @@
 			<div class="nav-wrapper container">
 				<a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
 				<ul class="right hide-on-med-and-down">
-					<li class="active"><a href="index.html">Inicio</a></li>
+					<li><a class="white-text" href="index.html">Inicio</a></li>
 					<li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
-					<li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
+					<li class="active"><a href="alojamiento.html">Alojamiento</a></li>
 					<li><a class="white-text" href="galeria.html">Galería</a></li>
 					<li><a class="white-text" href="restorant.html">Restaurantes</a></li>
 					<li><a class="white-text" href="team.html">Equipo</a></li>
