--- a/site/galeria.html
+++ b/site/galeria.html
@@ -13,6 +13,8 @@
 	<!--Import materialize.css-->
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<!-- CSS  -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" type="text/css" href="css/galeria.css">
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 <title>Hotel La Fuente J.N.</title>
 </head>
