--- a/site/habitaciones.html
+++ b/site/habitaciones.html
@@ -12,6 +12,8 @@
 
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- CSS  -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" type="text/css" href="css/galeria.css">
   
 </head>
 <body>
