--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,8 @@
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
   <!--Import materialize.css-->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- CSS  -->
@@ -21,8 +23,11 @@
 <body>
   <div>
   	<nav class="indigo" role="navigation">
+    <font class="tangerine_lit left">Hotel La Fuente J.N.</font>
       <div class="nav-wrapper container">
+
         <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
+        
         <ul class="right hide-on-med-and-down">
           <li class="active"><a href="index.html">Inicio</a></li>
           <li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
@@ -41,7 +46,7 @@
           <li><a href="team.html">Equipo</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse right"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </div>
@@ -67,7 +72,7 @@
         <img src="img/font1.jpg"> <!-- IMAGEN 1 -->
         <div class="caption right-align">
           <div class="container">
-            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <h1 class="tangerine_tit center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
             <br><br>
             <div class="row center">
               <h5 class="header col s12 light">Un lugar de ensueño.</h5>
@@ -83,7 +88,7 @@
         <img src="img/room3.jpg"> <!-- IMAGEN 2 -->
         <div class="caption right-align">
           <div class="container">
-            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <h1 class="tangerine_tit header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
             <br><br>
             <div class="row center">
               <h5 class="header col s12 light">Un lugar de ensueño.</h5>
@@ -99,7 +104,7 @@
         <img src="img/room10.jpg"> <!-- IMAGEN 3 -->
         <div class="caption right-align">
           <div class="container">
-            <h1 class="header center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
+            <h1 class="tangerine_tit center indigo-text text-lighten-4">Hotel La Fuente J.N.</h1>
             <br><br>
             <div class="row center">
               <h5 class="header col s12 light">Un lugar de ensueño.</h5>
