--- a/site/alojamiento.html
+++ b/site/alojamiento.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 	<div>
+		<font class="tangerine_lit left">Hotel La Fuente J.N.</font>
 		<nav class="indigo" role="navigation">
 			<div class="nav-wrapper container">
 				<a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
@@ -29,7 +30,7 @@
 					<li class="active"><a href="alojamiento.html">Alojamiento</a></li>
 					<li><a class="white-text" href="galeria.html">Galería</a></li>
 					<li><a class="white-text" href="restorant.html">Restaurantes</a></li>
-					<li><a class="white-text" href="team.html">Equipo</a></li>
+					<!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
 					<li><a class="white-text" href="contact.html">Contacto</a></li>
 				</ul>
 				<ul id="nav-mobile" class="side-nav">
