--- a/site/eventos.html
+++ b/site/eventos.html
@@ -15,6 +15,7 @@
 <body>
   
   <div class="navbar-fixed">
+    <font class="tangerine_lit left">Hotel La Fuente J.N.</font>
     <nav class="indigo" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="index.html" class="brand-logo"><img src="font.png" alt="" width="50px"></a>
