--- a/site/habitaciones.html
+++ b/site/habitaciones.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+  <meta name="description" content="Hotel La Fuente J.N.">
+  <!-- DESCRIPCIÓN PARA LOS BUSCADORES GOOGLE YAHOO AMAZON MSN.-->
+  <meta name="keywords" content="Viajes A La Macarena,Viajas Colombia, Hotel Caño Cristales,Hotel La Fuente J.N., Hotel La Fuente La Macarena, Viaje A Caño Cristales, Caño Cristales Colombia, La Macarena, La Macarena Meta,">
+  <!-- Palabras Clave --> <!-- NO BORRAR NUNCA IMPORTANTE PARA EL POSICIONAMIENTO AGREGAR CONCEPTOS CLAVE-->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Habitaciones Sencillas</title>
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
   <!--Import materialize.css-->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- CSS  -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" type="text/css" href="css/galeria.css">
-  
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <title>Habitaciones HFJN.</title>
 </head>
 <body>
   <div>
+    <font class="tangerine_lit left white-text">Hotel La Fuente J.N.</font>
     <nav class="indigo" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
@@ -27,7 +32,7 @@
           <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
           <li><a class="white-text" href="galeria.html">Galería</a></li>
           <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
-          <li><a class="white-text" href="team.html">Equipo</a></li>
+          <!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
           <li><a class="white-text" href="contact.html">Contacto</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
