--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <meta name="description" content="Hotel La Fuente J.N.">
   <!-- DESCRIPCIÓN PARA LOS BUSCADORES GOOGLE YAHOO AMAZON MSN.-->
   <meta name="keywords" content="Viajes A La Macarena,Viajas Colombia, Hotel Caño Cristales,Hotel La Fuente J.N., Hotel La Fuente La Macarena, Viaje A Caño Cristales, Caño Cristales Colombia, La Macarena, La Macarena Meta,">
   <!-- Palabras Clave --> <!-- NO BORRAR NUNCA IMPORTANTE PARA EL POSICIONAMIENTO AGREGAR CONCEPTOS CLAVE-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <!--Import materialize.css-->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- CSS  -->
@@ -22,19 +21,17 @@
 </head>
 <body>
   <div>
+    <font class="tangerine_lit left white-text">Hotel La Fuente J.N.</font>
   	<nav class="indigo" role="navigation">
-    <font class="tangerine_lit left">Hotel La Fuente J.N.</font>
       <div class="nav-wrapper container">
-
         <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
-        
         <ul class="right hide-on-med-and-down">
           <li class="active"><a href="index.html">Inicio</a></li>
           <li><a class="white-text" href="habitaciones.html">Habitaciones</a></li>
           <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
           <li><a class="white-text" href="galeria.html">Galería</a></li>
           <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
-          <li><a class="white-text" href="team.html">Equipo</a></li>
+          <!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
           <li><a class="white-text" href="contact.html">Contacto</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
@@ -121,39 +118,35 @@
 <!-- FIN  SLIDER DE IMÁGENES     -->
 
   
-  <div class="container">
-    <div class="section">
-
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center indigo-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Viaja En Familia</h5>
-
-            <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, el municipio más tranquilo del mundo.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center indigo-text"><i class="material-icons">verified_user</i></h2>
-            <h5 class="center">Satisfacción Garantizada</h5>
-
-            <p class="light">Conoce uno de los lugares turísticos más importantes del mundo donde vivirás una experiencia inolvidable.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center indigo-text"><i class="material-icons">shop</i></h2>
-            <h5 class="center">Guarda un recuerdo</h5>
-
-            <p class="light">Llévate recuerdos inolvidables que podrás compartir con tus experiencias con tus conocidos y familiares.</p>
-          </div>
-        </div>
+  <!--   Icon Section   -->
+  <div class="row indigo" style="width: 100%;">
+    <div class="card indigo lighten-3 col l3 s9 left">
+      <div class="icon-block">
+        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
+        <h2 class="center indigo-text"><i class="material-icons">group</i></h2>
+        <h5 class="center">Viaja En Familia</h5>
+        <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, el municipio más tranquilo del mundo.</p>
       </div>
+    </div>
 
+    <div class="card indigo lighten-3 col l6 s12 center">
+      <div class="icon-block">
+        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
+        <h2 class="center indigo-text"><i class="material-icons">verified_user</i></h2>
+        <h5 class="center">Satisfacción Garantizada</h5>
+
+        <p class="light">Conoce uno de los lugares turísticos más importantes del mundo donde vivirás una experiencia inolvidable que desearás repetir.</p>
+      </div>
+    </div>
+
+    <div class="card indigo lighten-3 col l3 s9 right">
+      <div class="icon-block">
+        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
+        <h2 class="center indigo-text"><i class="material-icons">shop</i></h2>
+        <h5 class="center">Guarda un recuerdo</h5>
+
+        <p class="light">Llévate recuerdos inolvidables que podrás compartir con tus experiencias con tus conocidos y familiares.</p>
+      </div>
     </div>
   </div>
 
@@ -166,7 +159,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="img/background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -218,7 +211,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="img/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer indigo darken-1">
