--- a/site/galeria.html
+++ b/site/galeria.html
@@ -10,6 +10,8 @@
 	
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<!-- CSS  -->
@@ -20,6 +22,7 @@
 </head>
 <body>
   <div>
+  	<font class="tangerine_lit left white-text">Hotel La Fuente J.N.</font>
   	<nav class="indigo" role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="index.html" class="brand-logo"><img src="img/font.png" alt="" width="50px"></a>
@@ -29,7 +32,7 @@
           <li><a class="white-text" href="alojamiento.html">Alojamiento</a></li>
           <li class="active"><a href="galeria.html">Galería</a></li>
           <li><a class="white-text" href="restorant.html">Restaurantes</a></li>
-          <li><a class="white-text" href="team.html">Equipo</a></li>
+          <!--<li><a class="white-text" href="team.html">Equipo</a></li>-->
           <li><a class="white-text" href="contact.html">Contacto</a></li>
         </ul>
         <ul id="nav-mobile" class="side-nav">
@@ -41,9 +44,21 @@
           <li><a href="team.html">Equipo</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse right"><i class="material-icons">menu</i></a>
       </div>
     </nav>
+  </div>
+
+  <div class="fixed-action-btn toolbar">
+    <a class="btn-floating btn-large indigo">
+    <i class="large material-icons">menu</i>
+    </a>
+    <ul>
+      <li><a class="waves-effect waves-light"><i class="material-icons">today</i></a></li>
+      <li><a class="waves-effect yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="waves-effect green"><i class="material-icons">perm_media</i></a></li>
+      <li><a class="waves-effect blue" href="contacto.html"><i class="material-icons">contact_mail</i></a></li>
+    </ul>
   </div>
 	<div class="titulo1">
 	  <h1>Siéntase Como En Casa En Nuestras Habitaciones.</h1>
@@ -194,6 +209,10 @@
 		</center>
 		</div>
 	</footer>
+	<!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 	<script>
 	var slideIndex = 1;
 	showDivs(slideIndex);
