--- a/site/index.html
+++ b/site/index.html
@@ -120,18 +120,10 @@
   
   <!--   Icon Section   -->
   <div class="row indigo" style="width: 100%;">
-    <div class="card indigo lighten-3 col l3 s9 left">
-      <div class="icon-block">
-        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
-        <h2 class="center indigo-text"><i class="material-icons">group</i></h2>
-        <h5 class="center">Viaja En Familia</h5>
-        <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, el municipio más tranquilo del mundo.</p>
-      </div>
-    </div>
 
-    <div class="card indigo lighten-3 col l6 s12 center">
+    <div class="card indigo lighten-3 col l3 s9 center">
       <div class="icon-block">
-        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
+        <img class="circle" width="100%" height="100%" src="img/satisfaccion.jpg" alt="">
         <h2 class="center indigo-text"><i class="material-icons">verified_user</i></h2>
         <h5 class="center">Satisfacción Garantizada</h5>
 
@@ -139,9 +131,18 @@
       </div>
     </div>
 
+    <div class="card indigo lighten-3 col l6 s12 left">
+      <div class="icon-block">
+        <img class="circle" width="100%" height="100%" src="img/family.jpg" alt="">
+        <h2 class="center indigo-text"><i class="material-icons">group</i></h2>
+        <h5 class="center">Viaja En Familia</h5>
+        <p class="light">Comparte con tu familia y seres queridos de una experiencia maravillosa viajando a la macarena, el municipio más tranquilo del mundo.</p>
+      </div>
+    </div>
+
     <div class="card indigo lighten-3 col l3 s9 right">
       <div class="icon-block">
-        <img class="circle" width="100%" height="100%" src="img/background1.jpg" alt="">
+        <img width="100%" height="100%" src="img/save.png" alt="">
         <h2 class="center indigo-text"><i class="material-icons">shop</i></h2>
         <h5 class="center">Guarda un recuerdo</h5>
 
